.archive/media/radarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  tls:
    secretName: home-vijayakumar-xyz
  routes:
    - match: Host(`radarr.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: default-headers
